src/objects/BST_Event_Del_Criteria__mdt.object
<CustomObject>
    <description>BOOST event deletion criteria based on Logged in User Country, Logged in U serProfile and  Event Status</description>
    <fields>
        <fullName>Allow_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_Event_Status__c</fullName>
        <label>BST_Event_Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_User_Country__c</fullName>
        <label>BST_User_Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_User_Profile__c</fullName>
        <label>BST_User_Profile</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOST - Business Administrator</fullName>
                </value>
                <value>
                    <fullName>BOOST - Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>BOOST – Sales Representative</fullName>
                </value>
                <value>
                    <fullName>BOOST - Support</fullName>
                </value>
                <value>
                    <fullName>Integration Administrator</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BST_Event_Delete_Criteria</label>
    <pluralLabel>BST_Event_Del_Criteria</pluralLabel>
</CustomObject>